# -------------------------------------------------------------
# 파일명 : pyproject.toml
# 이 파일은 Poetry 프로젝트 설정 파일이다.
# - 프로젝트 이름, 버전, 설명
# - 포함할 파이썬 폴더
# - 필요한 외부 패키지 목록
# - 프로젝트 빌드 절성
# 등을 정의한다.
# ------------------------------------------------------------


[tool.poetry]

name = "todo"                         # * 프로젝트 이름 (폴더명과는 무관)
version = "0.1.0"                     # * 프로젝트의 버전(업데이트할 때 변경)
description = ""                      # * 프로젝트에 대한 간단한 설명이다.
authors = ["woo <wjswoo3@gamil.com>"] # * 작성자의 이름과 이메일 주소를 입력한다. 
readme = "README.md"                  # * 이 프로젝트의 소개 문서 파일 이름이다.

# * 파이썬 코드가 들어 있는 폴더를 지정
# - 일반적으로 우리가 만든 Python 파일이 모여 있는 폴더명을 적는다

packages = [{ include = "api" }]
# 패키지 : Python 파일들이 모여 있는 폴더를 의미한다. 여기서는 'api' 폴더를 포함한다

# ------------------------------------------------------------------
# [의존성 목록: 이 프로젝트에서 필요한 패키지들]
# - 아래에 나열된 모든 패키지는 프로젝트 실행에 꼭 필요함
# ------------------------------------------------------------------

[tool.poetry.dependencies] # 의존성: 이 프로젝트가 실행되기 위해 필요한 패키지들의 목록이다.
Python = "^3.12"                                         # Python  버전은 3.12 이상을 사용한다.
fastapi = "^0.115.12"                                    # FastAPI는 웹 API를 만들기 위한 프레임 워크이다.
uvicorn = { extras = ["standard"], version = "^0.34.0" }
# * uvicornems FastAPI 앱을 실행하는 서버 도구이다. standard는 필요한 기능을 포함한 옵션이다.
# - extras 옵션에 "standard"를 넣으면 보안, 재시작 등의 기능도 함께 설치됨
sqlalchemy = "^2.0.40"

asyncpg = "^0.30.0"
# * asyncpg: PostgreSQL과 비동기로 연결할 수있게 해주는 드라이버
# = FastAPI에서 데이터베이스를 빠르게 사용하기 위해 필요함

psycopg2_binary = "^2.9.10"
# * psycopg2-binary: PostgreSQL에 동기 방식으로 연결할 수 있는 드라이버
# - 'migrate_db.py' 같은 초기화 스크립트에서 사용됨
# - asyncpg가 아닌 일반 DB 연결(create_engine) 시 사용


# ------------------------------------------------------------------
# 프로젝트를 빌드(포장하거나 배포)할 때 사용하는 설정
# - Poetry 내부적으로 사용하는 빌드 도구 지정
# ------------------------------------------------------------------


[build-system] # 프로젝트를 빌디(포장)할 때 사용하는 시스템 설정이다.
requires = ["poetry-core"]                # 빌드에 필요한 도구 이름이다.
build-backend = "poetry.core.masonry.api" # 백엔드 : 빌드 과정을 실제로 실행해 주는 내부 도구이다.
